# FileWhisperer

./: .gitignore  .history  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.arm64  DockerfileArm  Makefile  README.md  cyan  docker-compose.arm64.yml  docker-compose.yml  requirements.txt  test_ocr_gpu_cpu.py  vcpkg.json  项目交接文档.md
.github/workflows/: publish-arm.yml  publish.yml
cpp/: file_whisper.grpc.pb.cc  file_whisper.grpc.pb.h  file_whisper.pb.cc  file_whisper.pb.h
cpp/file_whisper_lib/: CMakeLists.txt  analyzer.hpp  common.cc  common.hpp  extractor.hpp  flavors.hpp
doc/: env.md
doc/grpc/reply/: WhisperReply.md
doc/grpc/request/: WhisperRequest.md
doc/requirements_document/: compressed_file_meta.md  file_meta_CompressedFile.md  file_meta_EmailFile.md  node_meta.md  requirements.md
file_whisper_lib/: CMakeLists.txt  analyzer.cc  common.cc  common.hpp  data_type.cc  data_type.hpp  extractor.cc  extractor.hpp  flavors.hpp  mime_type_enum.hpp  snowflake.cc  snowflake.hpp  types.hpp
proto/: file_whisper.proto
py/: client.py  extractor.py  file_whisper_pb2.py  file_whisper_pb2_grpc.py  word_extractor.py
src/: check_libs.py  client.py  common.cc  common.hpp  file_whisper_pb2.py  file_whisper_pb2_grpc.py  server.cc  server.py  set_cuda_env.sh  test_gpu.py
src/file_whisper_lib/: __init__.py  analyzer.py  batch_processor.py  dt.py  extractor.py  flavors.py  process_pool.py  process_workers.py  tree.py  types.py
src/file_whisper_lib/extractors/: __init__.py  archive_extractor.py  email_extractor.py  html_extractor.py  ocr_extractor.py  pdf_extractor.py  qrcode_extractor.py  url_extractor.py  utils.py  word_extractor.py
tests/: CMakeLists.txt  hello_test.cc  html_test.cc  mime_type_test.cc  qrcode_extract_test.cc  t.py  test_concurrent.py  test_extract_html.py  test_extract_html2.py  test_extract_html3.py  test_utils.cc  test_utils.hpp  test_word_extractor.py  url_extract_test.cc
tests/extractors/: test_archive_extractor.py  test_html_extractor.py  test_ocr_extractor.py  test_pdf_extractor.py  test_qrcode_extractor.py  test_url_extractor.py  test_utils.py  test_word_extractor.py
tests/fixtures/: doc_pwd_123456.doc  docx_pwd_123456.docx  img.html  sample.html  urls.txt  url没提取出来.html
tmp/: fb6439e2-3bec-49ac-957f-1ed271459f47
